# arena-parser

./: LICENSE  package-lock.json  package.json
.github/workflows/: checks.yml  ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: matches.db
src-tauri/src/: card.rs  deck.rs  ingest.rs  main.rs  scryfall.rs
src-tauri/src/commands/: match_details.rs  matches.rs  mod.rs
src/app/: globals.css  greet.tsx  layout.tsx  nav.tsx  page.tsx  reset.tsx
src/app/match-details/: match-details.tsx  page.tsx
src/app/matches/: matches_table.tsx  page.tsx
