[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
crossbeam = "0.8.4"
home = "0.5.9"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [] }
ap_core = { git = "https://github.com/gazure/arenaparser.git" }
rusqlite = {  version = "0.31.0", features = ["bundled", "chrono"] }
tokio = { version = "1.37.0", features = ["default"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
log = "0.4.21"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
