[package]
name = "arena-buddy"
version = "0.7.0"
description = "MTGA Arena companion app"
authors = ["Grant Azure <azure.grant@gmail.com>"]
license = "MIT"
repository = "https://github.com/gazure/arena-parser"
default-run = "arena-buddy"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
anyhow = "1.0.89"
ap_core = { git = "https://github.com/gazure/arenaparser.git", tag = "0.1.15" }
chrono = "0.4.38"
crossbeam = "0.8.4"
indoc = "2.0.5"
itertools = "0.13.0"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
serde_json = "1.0"
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
